--- a/environment.yml
+++ b/environment.yml
@@ -8,32 +8,32 @@ dependencies:
   - bcrypt=4.3.0
   - brotli-python=1.1.0
   - bzip2=1.0.8
-  - ca-certificates=2025.6.15
-  - certifi=2025.6.15
+  - ca-certificates=2025.8.3
+  - certifi=2025.8.3
   - cffi=1.17.1
-  - charset-normalizer=3.4.2
+  - charset-normalizer=3.4.3
   - click=8.2.1
   - colorama=0.4.6
-  - cryptography=45.0.4
+  - cryptography=45.0.7
   - cyrus-sasl=2.1.28
   - daiquiri=3.0.0
   - decorator=5.2.1
   - deprecated=1.2.18
   - exceptiongroup=1.3.0
   - fabric=3.2.2
-  - greenlet=3.2.3
-  - h2=4.2.0
+  - greenlet=3.2.4
+  - h2=4.3.0
   - hpack=4.1.0
   - hyperframe=6.1.0
   - icu=75.1
   - idna=3.10
   - iniconfig=2.0.0
   - invoke=2.2.0
-  - keyutils=1.6.1
+  - keyutils=1.6.3
   - krb5=1.21.3
-  - ld_impl_linux-64=2.43
+  - ld_impl_linux-64=2.44
   - libedit=3.1.20250104
-  - libexpat=2.7.0
+  - libexpat=2.7.1
   - libffi=3.4.6
   - libgcc=15.1.0
   - libgcc-ng=15.1.0
@@ -41,43 +41,42 @@ dependencies:
   - liblzma=5.8.1
   - libnsl=2.0.1
   - libntlm=1.8
-  - libpq=17.5
+  - libpq=17.6
   - libsodium=1.0.20
-  - libsqlite=3.50.2
+  - libsqlite=3.50.4
   - libstdcxx=15.1.0
   - libstdcxx-ng=15.1.0
-  - libuuid=2.38.1
+  - libuuid=2.41.1
   - libxcrypt=4.4.36
   - libzlib=1.3.1
   - ncurses=6.5
   - openldap=2.6.10
-  - openssl=3.5.1
+  - openssl=3.5.3
   - packaging=25.0
-  - paramiko=3.5.1
-  - pip=25.1.1
+  - paramiko=4.0.0
+  - pip=25.2
   - pluggy=1.6.0
   - psycopg2=2.9.10
   - pycparser=2.22
   - pygments=2.19.2
-  - pynacl=1.5.0
+  - pynacl=1.6.0
   - pysocks=1.7.1
-  - pytest=8.4.1
+  - pytest=8.4.2
   - python=3.11.13
   - python-json-logger=2.0.7
   - python_abi=3.11
   - readline=8.2
-  - requests=2.32.4
+  - requests=2.32.5
   - setuptools=80.9.0
   - six=1.17.0
   - sqlalchemy=1.4.46
   - tk=8.6.13
   - tomli=2.2.1
-  - typing_extensions=4.14.0
+  - typing_extensions=4.15.0
   - tzdata=2025b
   - urllib3=2.5.0
   - wheel=0.45.1
-  - wrapt=1.17.2
-  - zstandard=0.23.0
-  - pip:
-      - pastaplus-prune==2024.1.1
+  - wrapt=1.17.3
+  - zstandard=0.25.0
+  - zstd=1.5.7
 prefix: /home/servilla/miniconda3/envs/prune
