--- a/environment.yml
+++ b/environment.yml
@@ -5,12 +5,12 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
-  - backports.zstd=1.2.0
+  - backports.zstd=1.3.0
   - bcrypt=5.0.0
   - brotli-python=1.2.0
   - bzip2=1.0.8
-  - ca-certificates=2025.11.12
-  - certifi=2025.11.12
+  - ca-certificates=2026.1.4
+  - certifi=2026.1.4
   - cffi=2.0.0
   - charset-normalizer=3.4.4
   - click=8.3.1
@@ -26,7 +26,7 @@ dependencies:
   - h2=4.3.0
   - hpack=4.1.0
   - hyperframe=6.1.0
-  - icu=75.1
+  - icu=78.2
   - idna=3.11
   - iniconfig=2.3.0
   - invoke=2.2.1
@@ -44,10 +44,10 @@ dependencies:
   - libntlm=1.8
   - libpq=18.1
   - libsodium=1.0.20
-  - libsqlite=3.51.1
+  - libsqlite=3.51.2
   - libstdcxx=15.2.0
   - libstdcxx-ng=15.2.0
-  - libuuid=2.41.2
+  - libuuid=2.41.3
   - libxcrypt=4.4.36
   - libzlib=1.3.1
   - ncurses=6.5
@@ -57,25 +57,25 @@ dependencies:
   - paramiko=4.0.0
   - pip=25.3
   - pluggy=1.6.0
-  - psycopg2=2.9.10
+  - psycopg2=2.9.11
   - pycparser=2.22
   - pygments=2.19.2
-  - pynacl=1.6.1
+  - pynacl=1.6.2
   - pysocks=1.7.1
   - pytest=9.0.2
   - python=3.11.14
   - python-json-logger=2.0.7
   - python_abi=3.11
-  - readline=8.2
+  - readline=8.3
   - requests=2.32.5
   - setuptools=80.9.0
   - six=1.17.0
   - sqlalchemy=1.4.46
   - tk=8.6.13
-  - tomli=2.3.0
+  - tomli=2.4.0
   - typing_extensions=4.15.0
-  - tzdata=2025b
-  - urllib3=2.6.1
+  - tzdata=2025c
+  - urllib3=2.6.3
   - wheel=0.45.1
   - wrapt=1.17.3
   - zstd=1.5.7
