--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,76 @@
+_libgcc_mutex==0.1
+_openmp_mutex==4.5
 backports.zstd==1.3.0
 bcrypt==5.0.0
-Brotli==1.2.0
+brotli-python==1.2.0
+bzip2==1.0.8
+ca-certificates==2026.1.4
 certifi==2026.1.4
 cffi==2.0.0
 charset-normalizer==3.4.4
 click==8.3.1
 colorama==0.4.6
-cryptography==46.0.3
+cryptography==46.0.4
+cyrus-sasl==2.1.28
 daiquiri==3.0.0
 decorator==5.2.1
-Deprecated==1.3.1
+deprecated==1.3.1
 exceptiongroup==1.3.1
 fabric==3.2.2
-greenlet==3.3.0
+greenlet==3.3.1
 h2==4.3.0
 hpack==4.1.0
 hyperframe==6.1.0
+icu==78.2
 idna==3.11
 iniconfig==2.3.0
 invoke==2.2.1
-packaging==25.0
+keyutils==1.6.3
+krb5==1.21.3
+ld_impl_linux-64==2.45
+libedit==3.1.20250104
+libexpat==2.7.3
+libffi==3.5.2
+libgcc==15.2.0
+libgcc-ng==15.2.0
+libgomp==15.2.0
+liblzma==5.8.2
+libnsl==2.0.1
+libntlm==1.8
+libpq==18.1
+libsodium==1.0.20
+libsqlite==3.51.2
+libstdcxx==15.2.0
+libstdcxx-ng==15.2.0
+libuuid==2.41.3
+libxcrypt==4.4.36
+libzlib==1.3.1
+ncurses==6.5
+openldap==2.6.10
+openssl==3.6.1
+packaging==26.0
 paramiko==4.0.0
-pip==25.3
+pip==26.0
 pluggy==1.6.0
 psycopg2==2.9.11
 pycparser==2.22
-Pygments==2.19.2
-PyNaCl==1.6.2
-PySocks==1.7.1
+pygments==2.19.2
+pynacl==1.6.2
+pysocks==1.7.1
 pytest==9.0.2
+python==3.11.14
 python-json-logger==2.0.7
+python_abi==3.11
+readline==8.3
 requests==2.32.5
-setuptools==80.9.0
+setuptools==80.10.2
 six==1.17.0
-SQLAlchemy==1.4.46
+sqlalchemy==1.4.46
+tk==8.6.13
 tomli==2.4.0
 typing_extensions==4.15.0
+tzdata==2025c
 urllib3==2.6.3
-wheel==0.45.1
-wrapt==1.17.3
+wheel==0.46.3
+wrapt==2.1.1
+zstd==1.5.7
